cilium-metallb-install/04-app-namespace.yaml
# 04-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hse-llm-project
