cilium-metallb-install/05-app-deployment.yaml
# 05-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-2-api
  namespace: hse-llm-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app-2-api
  template:
    metadata:
      labels:
        app: test-app-2-api
    spec:
      containers:
        - name: app
          image: hashicorp/http-echo:0.2.3   # замените на свой образ
          args:
            - "-text=hello from test-app-2"
            - "-listen=:8080"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: test-app-2-api    # это имя используется в HTTPRoute
  namespace: hse-llm-project
spec:
  selector:
    app: test-app-2-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
