cilium-metallb-install/07-httproute.yaml
# 07-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-app-2-route
  namespace: hse-llm-project
spec:
  parentRefs:
    - name: web-gateway
      namespace: hse-llm-project       # явная ссылка на namespace Gateway
  hostnames:
    - "demo.hse-llm.internal"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: test-app-2-api  # имя Service из шага 7
          port: 8080
          namespace: hse-llm-project
